  * Als [RawsignalReceive] op [Off] staat, komen de op SDCard opgeslagen RawSignals wel binnen als event.
  * Als [RawSignalWrite] wordt aan gezet, dan wordt [RawSignalReceive] ook ingeschakeld.
  * [RawSignalWrite] heeft een tweede optionele parameter voor 'schonen' van signaal naar beperkt aantal (2..5) pulstijden.
  * [RawSignalPulses] in scriptfile laadt de pulsenbuffer voor latere verzending. Syntax: zie resultaat [RawSignalShow]      
       
- Nodo emercency reset door Pulse (IR_RX_DATA) tien seconden te verbinden met de LED-RED. (Zowel Mega als Small)
- Bug opgelost in invoer grote HEX getallen. 
- Alias funktionaliteit toegevoegd:
  * Voeg een alias toe met [Alias <alias>=<keyword>]
  * [AliasErase <alias | * > ] toegevoegd
  * [AliasList] toegevoegd.
- Commando [FileErase] wist alle bestanden als Par1 een asterisk '*' teken is. (Vroeger was zonder parameters alles wissen)  

R626:
- Commando[Output] kan nu naast [On] en [Off] ook optie [All] meekrijgen. Dan worden alle uitgaande events altijd verzonden.

R633:
- Bug in SendTo/EventlistWrite van build R626 opgelost.
- Status opvragen met SendTo levert geen events op maar directe weergave op terminal !!!
- EventlistShow kan worden opgevraagd met een SendTo
- Plugin_020 (BMP085Read) aangepast. WireNodo library aanpassing.

R635
- Issue 792:	'Wire' was not declared in this scope voor plugin 20 en 21.
- Issue 793:	"#define CLOCK false" geeft problemen met compileren
- Issue 815:	Plugin 20 komt niet door de compiler
- Issue 794:	P24 werkt niet op Arduino 1.0.1. (de geadviseerde versie volgens Nodo.Ino) wel met 1.0.5.

Nog te doen:
- Status debug geeft vreemde waarde.
- Status uitvraag via SendTo: Moet er een voorziening komen om toch events te kunnen genereren met de status waarden? Via VariableSet?
- uitklokken ontvangstroutine met analyser
- Aanpassen en testen: Lock mechanisme
\*****************************************************************************************/
