@@ -9,7 +9,6 @@
 #define UNIT_NODO        1 // Na een reset wordt dit het unitnummer van de Nodo
 #define CLOCK         true // true=code voor Real Time Clock mee compileren.
 #define NODO_MEGA     true // true = Nodo Mega, false=Nodo-Small
-#define ETHERNET     false // true = Deze Nodo beschikt over een ethernet kaart
 
 // Kaku              : Klik-Aan-Klik-Uit
 #define PLUGIN_001
@@ -40,5 +39,4 @@
 
 // BMP085
 #define PLUGIN_020
-#define PLUGIN_020_CORE
 
